--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,10 @@
 <HTML>
 <HEAD>
+<meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 <TITLE>Garage Door</TITLE>
 </HEAD>
 <BODY>
